# src/app/api/models/newsletter-subscription-dto.ts
@@ -1,0 +1,6 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface NewsletterSubscriptionDto {
+  email: string;
+}
