# src/app/api/models/update-user-dto.ts
@@ -1,0 +1,8 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UpdateUserDto {
+  email: string;
+  firstName: string;
+  lastName: string;
+}
