# src/app/api/models/user-response-dto.ts
@@ -1,0 +1,12 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { Role } from '../models/role';
+export interface UserResponseDto {
+  companyId?: string;
+  email?: string | null;
+  firstName?: string | null;
+  id?: string;
+  lastName?: string | null;
+  role?: Role;
+}
